proposed change vesioning scheme

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -178,7 +178,8 @@ git push -f
 \end{itemize}
 
 \subsection{Versioning Scheme}
-Whenever an item needs to have versions, it will follow the \textit{major.minor.patch} versioning scheme. This means when anything major has changed, such as a feature being added or response to a specification being changed it will increment the current \textit{major} number by one. \textit{Minor} updates will be for changing the item to refine a feature or to meet a specification and will also be incremented by one. For any bug fixes or commentary changes, the \textit{patch} can be incremented by one.
+When items of this system are added/revised, the version number of the system will update. This number will follow the \textit{major.minor.patch} versioning scheme (for example, version 2.1.4). %an example of some sort to make it more clear? Iunno
+This means when anything major has changed, such as a feature being added or a specification being changed, it will increment the current \textit{major} number by one. \textit{Minor} updates will include changes of items in order to refine a feature or meet a specification and will also be incremented by one. For any bug fixes or commentary changes, the \textit{patch} can be incremented by one.
 
 %Not sure if this helps makes it clearer, tell what what you think
 %Old Paragraph: Whenever an item needs to have versions, it will follow the \textit{major.minor.patch} versioning scheme. This means when anything major has changed, such as a feature being added or response to a specification being changed it will increment the current \textit{major} number by one. \textit{Minor} updates will be for changing the item to refine a feature or to meet a specification and will also be incremented by one. For any bug fixes or commentary changes, the \textit{patch} can be incremented by one.
