Prototyping process flow revised

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -185,8 +185,8 @@ In order to facilitate the development of the system, work will be organized int
 For the hardware design and assembly of the system, the team is currently using a rapid prototyping approach similar to the cycle in Figure \ref{fig:rapid}. This allows the team to quickly develop and build prototypes for parts of the system. Instead of building everything at once, portions of the system will be built incrementally and integrated into each other to form our complete system. We are also utilizing the agile methodology in conjunction with rapid prototyping to allow sections of the system to be designed and built simultaneously. This approach is beneficial because it gives more opportunities to obtain feedback from TAs or Dr. Alan Wassyng to further refine the prototype. The team is using ready made parts and 3D printing for prototype development because it allows for quick changes and improvements to the prototype which will eventually be implement into the final system.
 \begin{figure}
 	\centering
-	\includegraphics[width=0.7\textwidth]{effective-rapid-prototyping-diagram}
-	\caption{Rapid Prototyping Development Processes}
+	\includegraphics[width=.85\textwidth]{effective-rapid-prototyping-diagram}
+	\caption[]{Rapid Prototyping Development Processes}
 	\label{fig:rapid}
 \end{figure}
 \section{Onboarding Process}
