--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -178,12 +178,9 @@ git push -f
 \end{itemize}
 
 \subsection{Versioning Scheme}
-When items of this system are added/revised, the version number of the system will update. This number will follow the \textit{major.minor.patch} versioning scheme (for example, version 2.1.4). %an example of some sort to make it more clear? Iunno
-This means when anything major has changed, such as a feature being added or a specification being changed, it will increment the current \textit{major} number by one. \textit{Minor} updates will include changes of items in order to refine a feature or meet a specification and will also be incremented by one. For any bug fixes or commentary changes, the \textit{patch} can be incremented by one.
+When items of this system are added or revised, the version number of the system will be updated. This number will follow the\textit{major.minor.patch} versioning scheme. This means when anything major has changed, such as a feature being added or a specification being changed, it will increment the current \textit{major} number by one. \textit{Minor} updates will include changes of items in order to refine a feature or meet a specification and will also be incremented by one. For any bug fixes or commentary changes, the \textit{patch} number will be incremented by one.
 
-%Not sure if this helps makes it clearer, tell what what you think
-%Old Paragraph: Whenever an item needs to have versions, it will follow the \textit{major.minor.patch} versioning scheme. This means when anything major has changed, such as a feature being added or response to a specification being changed it will increment the current \textit{major} number by one. \textit{Minor} updates will be for changing the item to refine a feature or to meet a specification and will also be incremented by one. For any bug fixes or commentary changes, the \textit{patch} can be incremented by one.
-%
+
 \section{Process Workflow}
 In order to facilitate the development of the system, work will be organized into 2-week long sessions. At the beginning of the week, the team will consider the next 2-3 deliverables and schedule them in accordingly. The team will attempt to finish each deliverable a week or more before the deadline. This allows the team to be ahead of schedule and gives them the ability to respond to other items should they arise. During meetings before the end of each 2-week session, any priorities will be adjusted as needed. When the work session is completed, items will be placed into the next session or placed in the backlog until the further consideration.
 \section{Onboarding Process}
