--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -187,7 +187,7 @@ For the hardware design and assembly of the system, the team is currently using 
 \begin{figure}
 	\centering
 	\includegraphics[width=.8\textwidth]{img/Rapid-Prototyping-Dev-Process.png}
-	\caption[]{Rapid Prototyping Development Processes}
+	\caption{Rapid Prototyping Development Processes}
 	\label{fig:rapid}
 \end{figure}
 \section{Onboarding Process}
