--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -8,6 +8,7 @@
 \usepackage{float}
 \usepackage{../latex/framed}
 \usepackage{hyperref}
+\usepackage{tikz}
 \hypersetup{
     colorlinks,
     citecolor=black,
@@ -75,6 +76,7 @@
    \hline
    October 28, 2017 & 1.0 & Added structure and content & Christopher McDonald \\ \hline
    October 30, 2017 & 1.1 & Added detail into Version Control section and revised document & Sharon Platkin \& Christopher McDonald \\ \hline
+   November 19th, 2017 & 1.2 & Proof-read & Nisarg Patel \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
@@ -84,28 +86,33 @@
 \section{Introduction}
 \subsection{Project Overview}
 SmartServe is an autonomous table tennis training system for a wide range of table tennis players to aid in diagnosing and improving their performance. The system does so by shooting balls toward the player and detecting successful returns. It can then adapt to the player's weaknesses and expose them by playing more to them over time. This alleviates problems of finding and working with a coach or training many players in a short amount of time. The system will be deemed a success if table tennis players enjoy and can see value in using our system in place of or in tandem to a coach.\\\\
-The development started at the beginning of the Fall 2017 academic turn and will conclude at the end of the Winter 2018 term. The team was assembled in the capstone course for Software and Mechatronics Engineering disciplines.
+The development started at the beginning of the Fall 2017 academic term and will conclude at the end of the Winter 2018 term. The team was assembled from MECHTRON 4TB6/SFWR ENG 4G06 Capstone course for the Software and Mechatronics Engineering disciplines.
 \subsection{Naming Conventions \& Terminology}
 \begin{itemize}
-\item \textbf{Git}: a distributed versioning control system
+\item \textbf{DevOps}: development operations
+\item \textbf{Git}: a version control system for tracking changes and coordinate work among multiple collaborators
 \item \textbf{Master Branch}: the main branch of the GitHub repository
 \item \textbf{PR}: pull request, a request to add changes from one branch into another done via a merge commit or rebase
 \item \textbf{Slack}: a messaging platform for teams to subscribe and publish to channels or send messages between two or more team members
-\item \textbf{DevOps}: development operations
+\item \textbf{Trello}: a web-based project management application utilized by the project team
 \end{itemize}
 
-\section{Team Members}
-The team members are as follows:
+\section{Project Team}
+The project team members consists of:
 \begin{itemize}
-\item Christopher McDonald
-\item Harit Patel
-\item Janak Patel
-\item Jared Rayner
-\item Nisarg Patel
-\item Sam Hamel
-\item Sharon Platkin
+\item Christopher McDonald - Software Engineering and Management
+\item Harit Patel - Software Engineering and Management
+\item Janak Patel - Mechatronics Engineering and Management
+\item Jared Rayner - Mechatronics Engineering and Management
+\item Nisarg Patel - Mechatronics Engineering and Management
+\item Sam Hamel - Software Engineering
+\item Sharon Platkin - Software Engineering
 \end{itemize}
-In addition to the list above, Dr. Alan Wassyng will be the Project Advisor. He will be assisted by Bennett Mackenzie, Nicholas Annable, Stephen Wynn-Williams and Viktor Smirnov for marking and providing advice to the team.
+Additionally, Dr. Alan Wassyng will be the Project Advisor and will advise the project team as needed with challenges and provide guidance. Importantly, the project team will work closely with Nicholas Annable and Viktor Smirnov as well as seek advice from them on frequent basis.
+
+\subsection{Team Organization Overview}
+\usetikzlibrary{shapes.geometric, arrows}
+
 \subsection{Roles \& Responsibilities}
 See Table \ref{rr} for a breakdown of roles and responsibilities. When a backup member is needed, they will be listed in italics.
 \begin{table}[H] % TODO maybe fix table?
