Incorporated Team Overview section and diagram into devprocess document

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -8,7 +8,6 @@
 \usepackage{float}
 \usepackage{../latex/framed}
 \usepackage{hyperref}
-\usepackage{tikz}
 \hypersetup{
     colorlinks,
     citecolor=black,
@@ -111,7 +110,12 @@ The project team members consists of:
 Additionally, Dr. Alan Wassyng will be the Project Advisor and will advise the project team as needed with challenges and provide guidance. Importantly, the project team will work closely with Nicholas Annable and Viktor Smirnov as well as seek advice from them on frequent basis.
 
 \subsection{Team Organization Overview}
-\usetikzlibrary{shapes.geometric, arrows}
+\begin{figure}[htbp]
+   \centering
+   \includegraphics[width=1\textwidth]{img/Team_Overview_Chart.png} % requires the graphicx package
+   \caption{Project Team Organization Chart with Hierarchy levels}
+   \label{fig:teamoverview}
+\end{figure}
 
 \subsection{Roles \& Responsibilities}
 See Table \ref{rr} for a breakdown of roles and responsibilities. When a backup member is needed, they will be listed in italics.
