Completed Team Overview Section 2.1

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -110,9 +110,10 @@ The project team members consists of:
 Additionally, Dr. Alan Wassyng will be the Project Advisor and will advise the project team as needed with challenges and provide guidance. Importantly, the project team will work closely with Nicholas Annable and Viktor Smirnov as well as seek advice from them on frequent basis.
 
 \subsection{Team Organization Overview}
+The core project team has three hierarchical vertical levels: Team Guide, Team Leads and Team Members. At first, the Team Guide is essentially a centralized Project Leader who primarily ensures that the team is executing the project as planned as well as the team is meeting all the project's requirements such as time, budget and specified scope. Moreover, due to the complexity of the project's scope the team has decided to divide the team into two main areas: Software and Hardware. The software team will be primarily responsible for delivering all of the software aspects of the project to ensure that the hardware team is fully supported by software systems to run the hardware. Whereas, the hardware team will be primarily responsible for delivering all of the hardware components of the project such as Electrical, Mechanical and Mechatronics systems. Next, the team has decided to appoint Team Leads for the Software and Hardware team to increase the effectiveness of tasks delegation and ease sub-team management. A visual representation of the team's organizational structure is shown in Figure \ref{fig:teamoverview}.
 \begin{figure}[htbp]
    \centering
-   \includegraphics[width=1\textwidth]{img/Team_Overview_Chart.png} % requires the graphicx package
+   \includegraphics[width=0.8\textwidth]{img/Team_Overview_Chart.png} % requires the graphicx package
    \caption{Project Team Organization Chart with Hierarchy levels}
    \label{fig:teamoverview}
 \end{figure}
