Restructure 2.2 Roles and Responsibilites

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -75,7 +75,8 @@
    \hline
    October 28, 2017 & 1.0 & Added structure and content & Christopher McDonald \\ \hline
    October 30, 2017 & 1.1 & Added detail into Version Control section and revised document & Sharon Platkin \& Christopher McDonald \\ \hline
-   November 19th, 2017 & 1.2 & Proof-read & Nisarg Patel \\ \hline
+   November 19th, 2017 & 1.2 & Added Team Organization Overview & Nisarg Patel \\ \hline
+   November 22nd, 2017 & 1.3 & Added details in Roles and Responsibilites & Nisarg Patel \\ \hline
    \end{tabularx}
    \caption{Revision History}
 \end{figure}
