Added and completed Management Roles and Responsibilites

--- a/documentation/DevelopmentProcess/DevelopmentProcess.tex
+++ b/documentation/DevelopmentProcess/DevelopmentProcess.tex
@@ -120,20 +120,22 @@ The core project team has three hierarchical vertical levels: Team Guide, Team L
 \end{figure}
 
 \subsection{Roles \& Responsibilities}
-See Table \ref{rr} for a breakdown of roles and responsibilities. When a backup member is needed, they will be listed in italics.
+The team has separated its roles and responsibilities into two subsections: Management and Technical. The team realizes that in order to for the project to be successful, at first the team dynamics will need to be perfect. So, the team has implemented daily management tasks and technical tasks to each team member to ensure workload balance. Please refer to Table \ref{mgmtrr} for the breakdown of the management aspects, and Table for the technical aspects of roles and responsibilities of each team member. Also, note that italics indicate a backup delegate for that particular role.
 \begin{table}[H] % TODO maybe fix table?
 \centering
-\caption{Roles \& Responsibilities Breakdown} 
-\label{rr}
 \begin{tabularx}{\textwidth}{| l | p{4cm} | X |}
 \hline
 Role & Member(s) & Responsibility \\ \hline
-Scribe & Sharon Platkin \newline \textit{Jared Rayner} & Taking notes for all meetings \newline Posting notes to Slack after meetings \newline Booking rooms for team meetings  \\ \hline
-DevOps Developer & Christopher McDonald \newline \textit{Sharon Platkin} & Solving issues related to GitHub \newline Configuring CI Tools \newline Merging code changes into the \textit{master} branch  \\ \hline
-Team Contact & Christopher McDonald \newline \textit{Nisarg Patel} & Handle a majority of communication with Project Advisor and Teaching Assistants \\ \hline
-Hardware Team Member & Janak Patel \newline Jared Rayner \newline Nisarg Patel & Handle most hardware focused work tasks \\ \hline
-Software Team Member & Christopher McDonald \newline Harit Patel \newline Sam Hamel \newline Sharon Platkin & Handle most software focused work tasks \\ \hline
+Note Taker & Sharon Platkin \newline \textit{Jared Rayner} & Take notes for all meetings. \newline Book rooms for team meetings.  \\ \hline
+DevOps Developer & Christopher McDonald \newline \textit{Sharon Platkin} & Solve issues related to GitHub. \newline Configuring Continuous Integration (CI) tools. \newline Merge code changes into the \textit{master} branch. \\ \hline
+Team Contact & Christopher McDonald \newline \textit{Nisarg Patel} & Handle the majority of communication with Project Advisor and Teaching Assistants. \\ \hline
+Hardware Team Lead & Nisarg Patel \newline \textit{Jared Rayner} & Facilitate team workflow for design, prototype, implementation and documentation activities of hardware components. \newline Ensure that the hardware team delivers all of the hardware aspects of the project as per the requirements.\\ \hline
+Software Team Lead & Harit Patel \newline \textit {Sam Hamel} & Facilitate team workflow for design, prototype, implementation and documentation activities of software components. \newline Ensure that the software team delivers all of the software aspects of the project as per the requirements.\\ \hline
+Hardware Team Management & Janak Patel \newline Jared Rayner \newline Nisarg Patel & Handle hardware focused Project Management tasks. \newline Perform documentation and presentation of all of the hardware components of the project. \\ \hline
+Software Team Management & Christopher McDonald \newline Harit Patel \newline Sam Hamel \newline Sharon Platkin & Handle software focused Project Management tasks. \newline Perform documentation and presentation of all of the software components of the project.\\ \hline
 \end{tabularx}
+\caption{Management Roles \& Responsibilities Breakdown} 
+\label{mgmtrr}
 \end{table}
 \subsection{Meeting Schedule}
 The team currently has weekly meetings scheduled on Tuesdays at 16:30 and Fridays at 16:30 for a duration of 50 minutes. Every member of the team is expected to attend. Every other Tuesday meeting must cover reflecting on the previous 2 weeks and planning the following 2 weeks for what work needs to be done in that time. All other meetings will be for progress updates, clarifying any work going forward and removing roadblocks which inhibit optimal performance. \\ \\
