--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -93,29 +93,32 @@ To judge how well the system meets the problem described above, several aspects 
 The following items encompass the low-level goals of the system:
 \begin{itemize}
 \item The system can detect valid returns from the user with an accuracy of 90\%
-\item The system can hit each square of a 4x4 grid with an accuracy of 75\%
+\item The system can hit each square of a 3x3 grid with an accuracy of 75\%
 \item The system implements reinforcement learning algorithms
-\item The system can shoot a variety of shots 
-\item The system can provide feedback to the user based on their performance
+\item The system can provide insightful feedback to the user
+\item The system is implemented with one camera
+\item The shooting mechanism can pan
+\item The shooting mechanism can shoot at various speeds
 \end{itemize}
 \subsection{Mid-Level Goals}
 The following items encompass the mid-level goals of the system:
 \begin{itemize}
-\item The system can hit each square of a 8x8 grid with an accuracy of 75\%
+\item The system can hit each square of a 4x4 grid with an accuracy of 75\%
 \item The system can notify the user of their performance after each shot is taken
 \item The system has multiple modes including `single-shot' and random
+\item The system can apply various spin directions
 \item The system can support multiple user profiles
-\item The system can apply top spin to the ball
+\item The system is implemented with a stereoscopic camera
+\item 
 \end{itemize}
 \subsection{High-Level Goals}
 The following items encompass the high-level goals of the system:
 \begin{itemize}
-\item The system can hit each square of a 16x16 grid with an accuracy of 75\%
-\item The system can apply top and side spin to the ball
+\item The system can hit each square of a 6x6 grid with an accuracy of 75\%
 \item The system can track the ball throughout the complete path travelled across the table
-\item The system can shoot from different heights
+\item The system is implemented with two synchronized cameras
+\item The system can shoot at variable pitch
 \end{itemize}
-
 
 
 \end{document}  
