revised goals based on feedback

--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -92,29 +92,29 @@ To judge how well the system meets the problem described above, several aspects 
 \subsection{Low-Level Goals}
 The following items encompass the low-level goals of the system:
 \begin{itemize}
-\item The system can detect valid returns from the user with an accuracy of 90\%
-\item The system can hit each square of a 3x3 grid with an accuracy of 75\%
+\item The system can detect valid returns from the user with an accurately
+\item The system can hit 9 zones on the table, corresponding to a 3x3 grid
 \item The system implements reinforcement learning algorithms
-\item The system can provide insightful feedback to the user
+\item The system helps user improve their game in any way % made change to sound more like a goal
 \item The system is implemented with one camera
 \item The shooting mechanism can pan
-\item The shooting mechanism can shoot at various speeds
+\item The shooting mechanism can shoot with variable speeds
 \end{itemize}
+The above list encompasses what we determine as a successful product. The system would be 
 \subsection{Mid-Level Goals}
 The following items encompass the mid-level goals of the system:
 \begin{itemize}
-\item The system can hit each square of a 4x4 grid with an accuracy of 75\%
-\item The system can notify the user of their performance after each shot is taken
-\item The system has multiple modes including `single-shot' and random
+\item The system can hit 16 zones on the table, corresponding to a 4x4 grid
+\item The system has realtime performance updates
+\item The system has implements the `single-shot' and random shooting modes
 \item The system can apply various spin directions
 \item The system can support multiple user profiles
 \item The system is implemented with a stereoscopic camera
-\item 
 \end{itemize}
 \subsection{High-Level Goals}
 The following items encompass the high-level goals of the system:
 \begin{itemize}
-\item The system can hit each square of a 6x6 grid with an accuracy of 75\%
+\item The system can hit 36 zones on the table, corresponding to a 6x6 grid
 \item The system can track the ball throughout the complete path travelled across the table
 \item The system is implemented with two synchronized cameras
 \item The system can shoot at variable pitch
