--- a/documentation/projectGoals/ProjectGoals.tex
+++ b/documentation/projectGoals/ProjectGoals.tex
@@ -92,10 +92,10 @@ To judge how well the system meets the problem described above, several aspects 
 \subsection{Low-Level Goals}
 The following items encompass the low-level goals of the system:
 \begin{itemize}
-\item The system can detect valid returns from the user with an accurately
+\item The system can detect valid returns from the user
 \item The system can hit 9 zones on the table, corresponding to a 3x3 grid
 \item The system implements reinforcement learning algorithms
-\item The system helps user improve their game in any way % made change to sound more like a goal
+\item The system helps improve the user's ability to play table tennis % made change to sound more like a goal
 \item The system is implemented with one camera
 \item The shooting mechanism can pan
 \item The shooting mechanism can shoot with variable speeds
@@ -105,8 +105,8 @@ The above list encompasses what we determine as a successful product. The system
 The following items encompass the mid-level goals of the system:
 \begin{itemize}
 \item The system can hit 16 zones on the table, corresponding to a 4x4 grid
-\item The system has realtime performance updates
-\item The system has implements the `single-shot' and random shooting modes
+\item The system has real-time performance updates
+\item The system implements `single-shot' and random shooting modes
 \item The system can apply various spin directions
 \item The system can support multiple user profiles
 \item The system is implemented with a stereoscopic camera
