--- a/documentation/SystemDesign/Design.tex
+++ b/documentation/SystemDesign/Design.tex
@@ -16,6 +16,8 @@
     urlcolor=black
 }
 
+% ask Nick about lines, predicted abnormal behaviour, computer vision FSM to detect returns, UI, ask Nick about need 3D model, CRC card formatting, add Shot Opt requirement, add electric schematic
+
 \begin{document}
 
 \begin{titlepage}
@@ -83,7 +85,7 @@ The project started at the beginning of the Fall 2017 academic term and will con
 \subsection{Document Overview}
 This document will cover the entire system from a high level point of view. This means the system will be decomposed into subsystems which each have their own responsibilities and design. The subsystems will have their intended input, expected output and description of how the module will be used. In further documentation, each will be designed in a way which is abstracted from this document's perspective. The expected use cases will also be detailed to understand the expectations of the user and how each subsystem interacts with another. A more detailed view of this including timing as a factor will be detailed in the Sequence Diagram section. \\ \\
 For each subsystem, its purpose will be defined with respect to the overall system. After doing so, detailed input and output parameters will be defined. The means of communication will also need to be described as these could be simple method calls to requests over some transport protocol like HTTP or TCP. The general architecture will be decided for each subsystem will be given as each needs to satisfy unique requirements and thus needs to be decided at a system level. \\ \\
-To finish the document, each subsystem will be responsible for implementing some set of requirements. These requirements are outlined in the requirements document found here. % TODO link
+To finish the document, each subsystem will be responsible for implementing some set of requirements which can be found \href{../Requirements/Requirements.pdf}{here}. These requirements are outlined in the requirements document found here.
 In the ideal scenario, one subsystem will be the only one that is responsible for any one requirement but may not be the case for all the requirements. 
 \subsection{Naming Conventions and Terminology}
 \label{sec:definitions}
@@ -114,7 +116,7 @@ In order to make the project feasible within the time constraint imposed on the 
 After the user has returned a shot from the system, the system will not make any attempts to return a shot that is likely to be returned given the user's returns. This is to give the system the ability to focus on a particular type of shot the user is the least proficient at returning. The characteristics of the shot following any return will be determined by the system's mode and the proficiency of the player if available.
 \section{System Description}
 \subsection{System Architecture}
-The system will follow a service-oriented / process-based architecture. This means that a central subsystem will interface with several services that serve a single purpose. Some subsystems will be simply told what needs to be done and others will asked for some return value. This is done to implement separation of concerns where one subsystem doesn't know everything about the system and only what is necessary to satisfy their requirements. It also allows for easy increments of versioning, where one subsystem can be used as long as it is functional and easily swapped out for a newer version with extra features or increased performance. Moreover, this system has heavy timing constraints and an unpredictable environment so some actions must be taken in absence of a service's response. For example, the computer vision may take longer to track a ball depending on its trajectory where the system must shoot another ball in order to keep the user engaged.
+The system will follow a service-oriented architecture. This means that a central subsystem will interface with several services that serve a single purpose. Some subsystems will be simply told what needs to be done and others will be asked for some return value. This is done to implement separation of concerns where one subsystem doesn't know everything about the system and only what is necessary to satisfy their requirements. It also allows for easy increments of versioning, where one subsystem can be used as long as it is functional and easily swapped out for a newer version with extra features or increased performance. Moreover, this system has heavy timing constraints and an unpredictable environment so some actions must be taken in absence of a service's response. For example, the computer vision may take longer to track a ball depending on its trajectory where the system must shoot another ball in order to keep the user engaged.
 \subsection{Subsystems}
 The system will be broken down into the subsystems with the following purposes: general managing of subsystems, computer vision to detect returns, shot recommendation, model the shot's trajectory, optimize the distance travelled by the shooting mechanism, store the data, take input and output from the user and shooting the ball toward the user. The diagram for this breakdown can be found in Figure \ref{fig:sub}.
 \begin{figure}[H]
